Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.2
-
Fix Version/s: N/A
-
Component/s: Storage Engine - RocksDB
-
Labels:None
Description
rocksdb.add_index_inplace [ fail ]
|
Test ended at 2016-11-21 17:30:48
|
 |
CURRENT_TEST: rocksdb.add_index_inplace
|
mysqltest: At line 163: query 'ALTER TABLE t1 ADD INDEX kij(i,j), ALGORITHM=INPLACE' failed: 1845: ALGORITHM=INPLACE is not supported for this operation. Try ALGORITHM=COPY
|
Attachments
Issue Links
- is part of
-
MDEV-9658 Make MyRocks in MariaDB stable
-
- Closed
-