MDEV-11329: MariaRocks: rocksdb.add_index_inplace fails

- Make ha_rocksdb::check_if_supported_inplace_alter() take into
  account the Alter_inplace_info::ALTER_PARTITIONED flag

- Adjust the testcase to work in MariaDB