storage/rocksdb/ha_rocksdb.cc
@@ -9656,7 +9656,8 @@ my_core::enum_alter_inplace_result ha_rocksdb::check_if_supported_inplace_alter(
   if (ha_alter_info->handler_flags &
       ~(my_core::Alter_inplace_info::DROP_INDEX |
         my_core::Alter_inplace_info::DROP_UNIQUE_INDEX |
-        my_core::Alter_inplace_info::ADD_INDEX))
+        my_core::Alter_inplace_info::ADD_INDEX |
+        my_core::Alter_inplace_info::ALTER_PARTITIONED))
   {
     DBUG_RETURN(my_core::HA_ALTER_INPLACE_NOT_SUPPORTED);
   }
